#![windows_subsystem ="windows"]
[package]
name = "granseal_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
granseal_engine = {path = "../granseal_engine"}
rand_xorshift = "0.3.0"
rand = "0.8.5"

